envoy.yaml
static_resources:
  listeners:
  - name: listener_https
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8443
    filter_chains:
    - transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                filename: "/etc/envoy/certs/envoy.crt"
              private_key:
                filename: "/etc/envoy/certs/envoy.key"
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_https
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: webserver
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              http_service:
                server_uri:
                  cluster: ai_model_service
                  timeout: 5.000s
                  uri: http://ai_model_service:5000/check
                path_prefix: "/check"
                authorization_request:
                  allowed_headers:
                    patterns:
                    - exact: "content-type"
                    - exact: "user-agent"
                    - exact: "x-forwarded-for"
                    - exact: "accept"
                authorization_response:
                  allowed_client_headers:
                    patterns:
                    - exact: "x-ext-auth-reason"
              with_request_body:
                max_request_bytes: 65536
                pack_as_bytes: false
              failure_mode_allow: false
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  - name: listener_http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: webserver
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              http_service:
                server_uri:
                  cluster: ai_model_service
                  timeout: 5.000s
                  uri: http://ai_model_service:5000/check
                path_prefix: "/check"
                authorization_request:
                  allowed_headers:
                    patterns:
                    - exact: "content-type"
                    - exact: "user-agent"
                    - exact: "x-forwarded-for"
                    - exact: "accept"
                authorization_response:
                  allowed_client_headers:
                    patterns:
                    - exact: "x-ext-auth-reason"
              with_request_body:
                max_request_bytes: 65536
                pack_as_bytes: false
              failure_mode_allow: false
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: webserver
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: webserver
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: webserver
                port_value: 8000

  - name: ai_model_service
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ai_model_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ai_model_service
                port_value: 5000
